--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "enzyme": "^3.7.0",
     "eslint": "^5.7.0",
     "eslint-plugin-react": "^7.11.1",
-    "jest": "^23.6.0",
+    "jest": "^25.2.3",
     "object-assign": "^4.1.1",
     "react-addons-perf": "^15.4.2",
     "react-test-renderer": "^16.5.2",
@@ -53,19 +53,20 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "braces": "^2.3.2",
     "context": "^0.0.1",
     "ejs": "^2.6.1",
     "enzyme-adapter-react-16": "^1.6.0",
     "enzyme-to-json": "^3.3.4",
     "express": "^4.16.3",
     "handlebars": "^4.7.3",
-    "jest-cli": "^23.6.0",
+    "jest-cli": "^25.2.3",
     "js-yaml": "^3.13.1",
     "lodash.debounce": "^4.0.8",
     "lodash.pickby": "^4.6.0",
     "mem": "^4.0.0",
     "merge": "^1.2.1",
-    "minimist": "^1.2.2",
+    "minimist": "^1.2.5",
     "mixin-deep": "^1.3.2",
     "pm2": "^3.2.2",
     "react": "^16.5.2",
